generate components and ng-routing

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,46 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+	padding-top: 70px;
+	padding-bottom: 70px;
+}
+
+.sw-color-white{
+	color: white;
+}
+
+.sw-color-black{
+	color: black;
+}
+
+.sw-bg-grey{
+	background-color: #afafaf;
+}
+
+.sw-full-width{
+	width: 100%;
+}
+
+.sw-95-width{
+	width: 95%;
+}
+
+.sw-90-width{
+	width: 90%;
+}
+
+.sw-50-width{
+	width: 50%;
+}
+
+a:hover{
+	text-decoration: none;
+}
+
+.sw-left-padding{
+	padding-left: 20px
+}
+
+.sw-absolute-right{
+	position: absolute;
+	right: 15px;
+}
+
