--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -2,14 +2,14 @@
 	<nav class="row navbar navbar-dark bg-primary fixed-top">
 		<!-- Left Navbar -->
 		<div class="col-sm-4 d-none d-md-block">
-			<a class="sw-color-white" href="website-list.html"><i class="fas fa-chevron-left"></i></a>
-			<a class="sw-color-white sw-left-padding" href="website-list.html"><b>Websites</b></a>
-			<a class="sw-color-white float-right" href="website-new.html"><i class="fas fa-plus"></i></a>
+			<a class="sw-color-white" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
+			<a class="sw-color-white sw-left-padding" routerLink="/user/:uid/website"><b>Websites</b></a>
+			<a class="sw-color-white float-right" routerLink="/user/:uid/website/new"><i class="fas fa-plus"></i></a>
 		</div>
 		<!-- Right Navbar -->
 		<div class="col-md-8">
-			<a class="sw-color-white" href="webste-edit.html"><b>Edit Website</b></a>
-			<a href="website-list.html" class="sw-color-white float-right" ><i class="fas fa-check"></i></a>
+			<a class="sw-color-white" routerLink="/user/:uid/website/:wid"><b>Edit Website</b></a>
+			<a routerLink="/user/:uid/website" class="sw-color-white float-right" ><i class="fas fa-check"></i></a>
 		</div>
 	</nav>
 	<div class="row">
@@ -18,20 +18,20 @@
 			<div class="container-fluid">
 				<ul class="list-group">
 					<li class="list-group-item">
-						<a href="../Page/page-list.html">Address Book App</a>
-						<a class="float-right" href="website-edit.html"><i class="fas fa-cog"></i></a>
+						<a routerLink="/user/:uid/website/:wid/page">Address Book App</a>
+						<a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
 					</li>
 					<li class="list-group-item">
-						<a href="../Page/page-list.html">Blogger</a>
-						<a class="float-right" href="website-edit.html"><i class="fas fa-cog"></i></a>
+						<a routerLink="/user/:uid/website/:wid/page">Blogger</a>
+						<a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
 					</li>
 					<li class="list-group-item">
-						<a href="../Page/page-list.html">Blogging App</a>
-						<a class="float-right" href="website-edit.html"><i class="fas fa-cog"></i></a>
+						<a routerLink="/user/:uid/website/:wid/page">Blogging App</a>
+						<a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
 					</li>
 					<li class="list-group-item">
-						<a href="../Page/page-list.html">Script Testing App</a>
-						<a class="float-right" href="website-edit.html"><i class="fas fa-cog"></i></a>
+						<a routerLink="/user/:uid/website/:wid/page">Script Testing App</a>
+						<a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
 					</li>
 				</ul>
 			</div>
@@ -48,8 +48,8 @@
 						<label><b>Description</b></label>
 						<textarea rows="5" class="form-control" placeholder="Describe your website here">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</textarea>
 					</div>
-					<a href="website-list.html" class="btn btn-danger">Delete</a>
-					<a href="website-list.html" class="btn btn-primary float-right">Update</a>
+					<a routerLink="/user/:uid/website" class="btn btn-danger">Delete</a>
+					<a routerLink="/user/:uid/website" class="btn btn-primary float-right">Update</a>
 				</form>
 			</div>
 		</div>
@@ -57,6 +57,6 @@
 	</div>
 	<footer class="navbar fixed-bottom navbar-dark bg-primary">
 		<div class="sw-full-width">
-			<a class="navbar-brand float-right" href="../User/profile.html"><i class="fas fa-user"></i></a>
+			<a class="navbar-brand float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a>
 		</div>
 	</footer>
