--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -1,10 +1,10 @@
 <!-- Navbar -->
 	<nav class="navbar fixed-top navbar-light sw-bg-grey">
-		<a class="sw-color-black" href="widget-list.html"><i class="fas fa-chevron-left"></i></a>
+		<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-chevron-left"></i></a>
 		<div class="sw-90-width">
-			<a class="navbar-brand float-left" href="widget-chooser.html"><b>Edit Widget</b></a>
+			<a class="navbar-brand float-left" routerLink="user/:uid/website/:wid/page/:pid/widget/new"><b>Edit Widget</b></a>
 		</div>
-		<a href="widget-list.html" class="sw-color-black float-right" ><i class="fas fa-check"></i></a>
+		<a routerLink="/user/:uid/website/:wid/page/:pid/widget" class="sw-color-black float-right" ><i class="fas fa-check"></i></a>
 	</nav>
 	<!-- form -->
 	<div class="container-fluid">
@@ -30,13 +30,13 @@
 				<input class="form-control" type="file" name="widget-upload" placeholder="100%">
 			</div>
 			<a class="btn btn-secondary btn-block" href="#">Upload Image</a>
-			<a class="btn btn-primary btn-block" href="widget-list.html">Submit</a>
-			<a class="btn btn-danger btn-block" href="widget-list.html">Delete</a>
+			<a class="btn btn-primary btn-block" routerLink="/user/:uid/website/:wid/page/:pid/widget">Submit</a>
+			<a class="btn btn-danger btn-block" routerLink="/user/:uid/website/:wid/page/:pid/widget">Delete</a>
 		</form>
 	</div>
 	<!-- footer -->
 	<footer class="navbar fixed-bottom navbar-light sw-bg-grey">
 		<div class="sw-full-width">
-			<a class="navbar-brand float-right" href="../User/profile.html"><i class="fas fa-user"></i></a>
+			<a class="navbar-brand float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a>
 		</div>
 	</footer>
