user.service.client.ts

--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -7,7 +7,7 @@
 			<div class="form-group">
 				<input class="form-control" type="password" name="password" placeholder="Password">
 			</div>
-			<a (click)="login()" class="btn btn-primary btn-block" routerLink="/user/:uid">Login</a>
+			<a class="btn btn-primary btn-block" routerLink="/user/:uid">Login</a>
 			<a class="btn btn-success btn-block" routerLink="/register">Register</a>
 		</form>
 	</div>
