--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,13 +1,16 @@
 <div class="container-fluid">
-		<h1>Login</h1>
-		<form>
-			<div class="form-group">
-				<input class="form-control" type="text" name="username" placeholder="Username">
-			</div>
-			<div class="form-group">
-				<input class="form-control" type="password" name="password" placeholder="Password">
-			</div>
-			<a class="btn btn-primary btn-block" routerLink="/user/:uid">Login</a>
-			<a class="btn btn-success btn-block" routerLink="/register">Register</a>
-		</form>
-	</div>
+	<h1>Login</h1>
+	<div *ngIf="errorFlag" class="alert alert-danger">Invalid username or password</div>
+	<form (ngSubmit)="login()" #f="ngForm">
+		<div class="form-group">
+			<input class="form-control" type="text" name="username" placeholder="Username" required ngModel #username="ngModel">
+		</div>
+		<span class="alert" *ngIf="username.invalid && username.touched">Please enter username!</span>
+		<div class="form-group">
+			<input class="form-control" required type="password" name="password" placeholder="Password" ngModel #password="ngModel">
+		</div>
+		<span class="alert" *ngIf="password.invalid && password.touched">Please enter password!</span>
+		<button class="btn btn-primary btn-block" [disabled]="f.invalid" type="submit">Login</button>
+		<button class="btn btn-success btn-block" routerLink="/register">Register</button>
+	</form>
+</div>
