--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -2,14 +2,14 @@
 	<nav class="row navbar navbar-dark bg-primary fixed-top">
 		<!-- Left Navbar -->
 		<div class="col-sm-4 d-none d-md-block">
-			<a class="sw-color-white" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
-			<a class="sw-color-white sw-left-padding" routerLink="/user/:uid/website"><b>Websites</b></a>
-			<a class="sw-color-white float-right" routerLink="/user/:uid/website/new"><i class="fas fa-plus"></i></a>
+			<a class="sw-color-white" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
+			<a class="sw-color-white sw-left-padding" routerLink="/user/{{uid}}/website"><b>Websites</b></a>
+			<a class="sw-color-white float-right" routerLink="/user/{{uid}}/website/new"><i class="fas fa-plus"></i></a>
 		</div>
 		<!-- Right Navbar -->
 		<div class="col-md-8">
-			<a class="sw-color-white" routerLink="/user/:uid/website/:wid"><b>Edit Website</b></a>
-			<a routerLink="/user/:uid/website" class="sw-color-white float-right" ><i class="fas fa-check"></i></a>
+			<a class="sw-color-white" routerLink="/user/{{uid}}/website/{{wid}}"><b>Edit Website</b></a>
+			<button class="btn sw-color-white float-right sw-button-to-a" type="submit" form="websiteForm"><i class="fas fa-check"></i></button>
 		</div>
 	</nav>
 	<div class="row">
@@ -17,21 +17,9 @@
 		<div class="col-md-4 d-none d-md-block">
 			<div class="container-fluid">
 				<ul class="list-group">
-					<li class="list-group-item">
-						<a routerLink="/user/:uid/website/:wid/page">Address Book App</a>
-						<a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
-					</li>
-					<li class="list-group-item">
-						<a routerLink="/user/:uid/website/:wid/page">Blogger</a>
-						<a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
-					</li>
-					<li class="list-group-item">
-						<a routerLink="/user/:uid/website/:wid/page">Blogging App</a>
-						<a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
-					</li>
-					<li class="list-group-item">
-						<a routerLink="/user/:uid/website/:wid/page">Script Testing App</a>
-						<a class="float-right" routerLink="/user/:uid/website/:wid"><i class="fas fa-cog"></i></a>
+					<li class="list-group-item" *ngFor ="let website of websites">
+						<a routerLink="/user/{{uid}}/website/{{website._id}}/page">{{website.name}}</a>
+						<a class="float-right" routerLink="/user/{{uid}}/website/{{website._id}}"><i class="fas fa-cog"></i></a>
 					</li>
 				</ul>
 			</div>
@@ -39,17 +27,18 @@
 		<!-- Right Form -->
 		<div class="col-md-8">
 			<div class="container-fluid">
-				<form>
+				<form id="websiteForm" (ngSubmit)="update()" #f="ngForm">
 					<div class="form-group">
 						<label><b>Name</b></label>
-						<input class="form-control" type="text" name="website-name" placeholder="Enter your website name" value="Blogger">
+						<input class="form-control" type="text" name="name" placeholder="Enter your website name" required ngModel="{{website.name}}" #name="ngModel">
 					</div>
+					<div class="alert alert-warning" *ngIf="name.invalid && name.touched">Name cannot be empty</div>
 					<div class="form-group">
 						<label><b>Description</b></label>
-						<textarea rows="5" class="form-control" placeholder="Describe your website here">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</textarea>
+						<textarea rows="5" class="form-control" name="description" placeholder="Describe your website here" ngModel="{{website.description}}" #description="ngModel"></textarea>
 					</div>
-					<a routerLink="/user/:uid/website" class="btn btn-danger">Delete</a>
-					<a routerLink="/user/:uid/website" class="btn btn-primary float-right">Update</a>
+					<button (click)="delete()" type="button" class="btn btn-danger">Delete</button>
+					<button type="submit" class="btn btn-primary float-right">Update</button>
 				</form>
 			</div>
 		</div>
