--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -1,32 +1,20 @@
 <nav class="navbar fixed-top navbar-light sw-bg-grey">
-		<a class="sw-color-black" routerLink="/user/:uid/website"><i class="fas fa-chevron-left"></i></a>
+		<a class="sw-color-black" routerLink="/user/{{uid}}/website"><i class="fas fa-chevron-left"></i></a>
 		<div class="sw-90-width">
-			<a class="navbar-brand float-left" routerLink="/user/:uid/website/:wid/page"><b>Page</b></a>
+			<a class="navbar-brand float-left" routerLink="/user/{{uid}}/website/{{wid}}/page"><b>Page</b></a>
 		</div>
-		<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page/new"><i class="fas fa-plus"></i></a>
+		<a class="sw-color-black" routerLink="/user/{{uid}}/website/{{wid}}/page/new"><i class="fas fa-plus"></i></a>
 	</nav>
 	<div class="container-fluid">
 		<ul class="list-group list-group-flush">
-			<li class="list-group-item">
-				<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page/:pid/widget">Blog Post</a>
-				<a class="float-right sw-color-black" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
-			</li>
-			<li class="list-group-item">
-				<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page/:pid/widget">Blogs</a>
-				<a class="sw-color-black float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
-			</li>
-			<li class="list-group-item">
-				<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page/:pid/widget">Home</a>
-				<a class="sw-color-black float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
-			</li>
-			<li class="list-group-item">
-				<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page/:pid/widget">About</a>
-				<a class="sw-color-black float-right" routerLink="/user/:uid/website/:wid/page/:pid"><i class="fas fa-cog"></i></a>
+			<li class="list-group-item" *ngFor="let page of pages">
+				<a class="sw-color-black" routerLink="/user/{{uid}}/website/{{wid}}/page/{{page._id}}/widget">{{page.name}}</a>
+				<a class="float-right sw-color-black" routerLink="/user/{{uid}}/website/{{wid}}/page/{{page._id}}"><i class="fas fa-cog"></i></a>
 			</li>
 		</ul>
 	</div>
 	<footer class="navbar fixed-bottom navbar-light sw-bg-grey">
 		<div class="sw-full-width">
-			<a class="navbar-brand float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a>
+			<a class="navbar-brand float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a>
 		</div>
 	</footer>
