--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -1,26 +1,29 @@
 <nav class="navbar fixed-top navbar-light sw-bg-grey">
-		<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page"><i class="fas fa-chevron-left"></i></a>
+		<a class="sw-color-black" routerLink="/user/{{uid}}/website/{{wid}}/page"><i class="fas fa-chevron-left"></i></a>
 		<div class="sw-90-width">
-			<a class="navbar-brand float-left" routerLink="/user/:uid/website/:wid/page/:pid"><b>Edit Page</b></a>
+			<a class="navbar-brand float-left" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}"><b>Edit Page</b></a>
 		</div>
-		<a routerLink="/user/:uid/website/:wid/page" class="sw-color-black float-right" ><i class="fas fa-check"></i></a>
+		<button type="submit" [disabled]="f.invalid" form="pageForm" class="btn sw-button-to-a sw-color-black float-right"><i class="fas fa-check"></i></button>
 	</nav>
 	<div class="container-fluid">
-		<form>
+		<form id="pageForm" (ngSubmit)="update()" #f="ngForm">
 			<div class="form-group">
 				<label><b>Name</b></label>
-				<input class="form-control" type="text" name="page-name" placeholder="Enter your page name..." value="Blog Post">
+				<input class="form-control" required ngModel="{{page.name}}" #name="ngModel" type="text" name="name" placeholder="Enter your page name..." value="Blog Post">
 			</div>
+
+			<div *ngIf="name.invalid && name.touched" class="alert alert-warning">Name cannot be empty</div>
+
 			<div class="form-group">
-				<label><b>Title</b></label>
-				<input class="form-control" type="text" name="page-title" placeholder="Enter your page title..." value="Blog">
+				<label><b>Description</b></label>
+				<input class="form-control" ngModel={{page.description}} #description="ngModel" type="text" name="description" placeholder="Enter your page description..." value="Blog">
 			</div>
-			<a class="btn btn-primary btn-block" routerLink="/user/:uid/website/:wid/page">Update</a>
-			<a class="btn btn-danger btn-block" routerLink="/user/:uid/website/:wid/page">Delete</a>
+			<button class="btn btn-primary btn-block" type="submit" [disabled]="f.invalid">Update</button>
+			<button type="button" class="btn btn-danger btn-block" (click)="remove()">Delete</button>
 		</form>
 	</div>
 	<footer class="navbar fixed-bottom navbar-light sw-bg-grey">
 		<div class="sw-full-width">
-			<a class="navbar-brand float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a>
+			<a class="navbar-brand float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a>
 		</div>
 	</footer>
