--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -1,1 +1,14 @@
-<h1>widget-edit working</h1>
+<div [ngSwitch]="widget.widgetType">
+	<!-- Heading -->
+	<div *ngSwitchCase="'HEADING'">
+		<app-widget-header></app-widget-header>
+	</div>
+	<!-- Image -->
+	<div *ngSwitchCase="'IMAGE'">
+		<app-widget-image></app-widget-image>
+	</div>
+	<!-- Youtube -->
+	<div *ngSwitchCase="'YOUTUBE'">
+		<app-widget-youtube></app-widget-youtube>
+	</div>
+</div>
