--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -1,28 +1,34 @@
 <!-- Navbar -->
 	<nav class="navbar fixed-top navbar-light sw-bg-grey">
-		<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page/:pid/widget"><i class="fas fa-chevron-left"></i></a>
+		<a class="sw-color-black" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"><i class="fas fa-chevron-left"></i></a>
 		<div class="sw-90-width">
-			<a class="navbar-brand float-left" routerLink="/user/:uid/website/:wid/page/:pid/widget/new"><b>Edit Widget</b></a>
+			<a class="navbar-brand float-left" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/new"><b>Edit Widget</b></a>
 		</div>
-		<a routerLink="/user/:uid/website/:wid/page/:pid/widget" class="sw-color-black float-right" ><i class="fas fa-check"></i></a>
+		<button [disabled]="f.invalid" type="submit" form="widgetForm" class="btn sw-button-to-a sw-color-black float-right" ><i class="fas fa-check"></i></button>
 	</nav>
 	<!-- form -->
 	<div class="container-fluid">
-		<form>
+		<form id="widgetForm" (ngSubmit)="update()" #f="ngForm">
+			
 			<div class="form-group">
 				<label><b>Name</b></label>
-				<input class="form-control" type="text" name="widget-name" placeholder="Enter your widget name...">
+				<input class="form-control" type="text" name="name" ngModel="{{widget.name}}" #name="ngModel" placeholder="Enter your widget name...">
 			</div>
+			
 			<div class="form-group">
 				<label><b>Text</b></label>
-				<input class="form-control" type="text" name="widget-text" placeholder="Enter your widget text...">
+				<input class="form-control" type="text" name="text" ngModel="{{widget.text}}" required #text="ngModel" placeholder="Enter your widget text...">
 			</div>
+
+			<div class="alert alert-danger" *ngIf="text.invalid && text.touched">Text can't be empty!</div>
+
 			<div class="form-group">
 				<label><b>Size</b></label>
-				<input class="form-control" type="number" name="widget-text" placeholder="Enter your widget text...">
+				<input class="form-control" type="number" name="size" ngModel="{{widget.size}}" required #size="ngModel" placeholder="Enter your widget text...">
 			</div>
-			<a class="btn btn-primary btn-block" routerLink="/user/:uid/website/:wid/page/:pid/widget">Submit</a>
-			<a class="btn btn-danger btn-block" routerLink="/user/:uid/website/:wid/page/:pid/widget">Delete</a>
+			<div class="alert alert-danger" *ngIf="size.invalid && size.touched">Size can't be empty!</div>
+			<button [disabled]="f.invalid" class="btn btn-primary btn-block" type="submit">Submit</button>
+			<button type="button" class="btn btn-danger btn-block" (click)="remove()" >Delete</button>
 		</form>
 	</div>
 	<!-- footer -->
