--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -1,89 +1,59 @@
 <!-- Navbar -->
 	<nav class="navbar fixed-top navbar-light sw-bg-grey">
-		<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page"><i class="fas fa-chevron-left"></i></a>
+		<a class="sw-color-black" routerLink="/user/{{uid}}/website/{{wid}}/page"><i class="fas fa-chevron-left"></i></a>
 		<div class="sw-90-width">
-			<a class="navbar-brand float-left" routerLink="/user/:uid/website/:wid/page/:pid/widget"><b>Widgets</b></a>
+			<a class="navbar-brand float-left" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget"><b>Widgets</b></a>
 		</div>
-		<a class="sw-color-black" routerLink="/user/:uid/website/:wid/page/:pid/widget/new"><i class="fas fa-plus"></i></a>
+		<a class="sw-color-black" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/new"><i class="fas fa-plus"></i></a>
 	</nav>
 	<!-- Widgets -->
 	<div class="container-fluid">
-		<!-- Heading -->
-		<div>
-			<div class="sw-absolute-right">
-				<a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
+		<div *ngFor="let widget of widgets">
+			<!-- icons for each widget -->
+			<div class="sw-absolute-right sw-front">
+				<a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget/{{widget._id}}"><i class="fas fa-cog"></i></a>
 				<a href="#"><i class="fas fa-bars"></i></a>
 			</div>
-			<h3>Hello</h3>
-		</div>
-		<!-- Heading -->
-		<div>
-			<div class="sw-absolute-right">
-				<a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-				<a href="#"><i class="fas fa-bars"></i></a>
+			<!-- content of each widget -->
+			<div [ngSwitch]="widget.widgetType">
+				<!-- HEADING -->
+				<div *ngSwitchCase="'HEADING'">
+					<div [ngSwitch]="widget.size">
+						<div *ngSwitchCase="1">
+							<h1>{{widget.text}}</h1>
+						</div>
+						<div *ngSwitchCase="2">
+							<h2>{{widget.text}}</h2>
+						</div>
+						<div *ngSwitchCase="3">
+							<h3>{{widget.text}}</h3>
+						</div>
+						<div *ngSwitchCase="4">
+							<h4>{{widget.text}}</h4>
+						</div>
+						<div *ngSwitchCase="5">
+							<h5>{{widget.text}}</h5>
+						</div>
+						<div *ngSwitchCase="6">
+							<h6>{{widget.text}}</h6>
+						</div>
+					</div>
+				</div>
+				<!-- IMAGE -->
+				<div *ngSwitchCase="'IMAGE'">
+					<img [src]="widget.url"
+						 [style.width]="widget.width">
+				</div>
+				<!-- YOUTUBE -->
+				<div *ngSwitchCase="'YOUTUBE'">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe [src]="this.getYoutubeUrl(widget.url)"
+						[style.width]="widget.width"
+						frameborder="0"
+						allowfullscreen></iframe>
+					</div>
+				</div>
 			</div>
-			<h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h5>
-		</div>
-		<!-- Image -->
-		<div>
-			<div class="sw-absolute-right">
-				<a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-				<a href="#"><i class="fas fa-bars"></i></a>
-			</div>
-			<img width="100%" class="d-lg-none" src="https://imagejournal.org/wp-content/uploads/bb-plugin/cache/23466317216_b99485ba14_o-panorama.jpg">
-			<img width="50%" class="d-none d-lg-block" src="https://imagejournal.org/wp-content/uploads/bb-plugin/cache/23466317216_b99485ba14_o-panorama.jpg">
-		</div>
-		<!-- Heading -->
-		<div>
-			<div class="sw-absolute-right">
-				<a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-				<a href="#"><i class="fas fa-bars"></i></a>
-			</div>
-			<h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. <a href="https://www.google.com">Duis aute irure dolor</a> in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h6>
-		</div>
-		<!-- Heading -->
-		<div>
-			<div class="sw-absolute-right">
-				<a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-				<a href="#"><i class="fas fa-bars"></i></a>
-			</div>
-			<h5>Bye ByeByeByeByeByeByeByeByeByeByeBye</h5>
-		</div>
-		<!-- Youtube -->
-		<div>
-			<div class="sw-absolute-right">
-				<a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-				<a href="#"><i class="fas fa-bars"></i></a>
-			</div>
-			<div class="d-lg-none embed-responsive embed-responsive-16by9">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2WDTNeQagrA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</div>
-			<div class="d-none d-lg-block embed-responsive embed-responsive-16by9 sw-50-width">
-				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2WDTNeQagrA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-			</div>
-		</div>
-		<!-- heading -->
-		<div>
-			<div class="sw-absolute-right">
-				<a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid"><i class="fas fa-cog"></i></a>
-				<a href="#"><i class="fas fa-bars"></i></a>
-			</div>
-			<h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h6>
 		</div>
 	</div>
 	<!-- footer -->
@@ -91,6 +61,6 @@
 		<div class="sw-full-width">
 			<a href="#" class="btn btn-primary">publish</a>
 			<a href="#" class="btn btn-warning">Preview</a>
-			<a class="navbar-brand float-right" routerLink="/user/:uid"><i class="fas fa-user"></i></a>
+			<a class="navbar-brand float-right" routerLink="/user/{{uid}}"><i class="fas fa-user"></i></a>
 		</div>
 	</footer>
