--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-dark bg-primary">
-		<a class="sw-color-white" routerLink="/user/{{uid}}"><i class="fas fa-chevron-left"></i></a>
+		<a class="sw-color-white" routerLink="/user"><i class="fas fa-chevron-left"></i></a>
 		<div class="sw-90-width">
 			<a class="navbar-brand float-left" routerLink="/user/{{uid}}/website"><b>Websites</b></a>
 		</div>
