--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -53,6 +53,10 @@
 						allowfullscreen></iframe>
 					</div>
 				</div>
+				<!-- HTML -->
+				<div *ngSwitchCase="'HTML'">
+					<div [innerHTML]="parseHTML(widget.text)">
+				</div>
 			</div>
 		</div>
 	</div>
