--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -9,7 +9,7 @@
 		<!-- Right Navbar -->
 		<div class="col-md-8">
 			<a class="sw-color-white" routerLink="/user/{{uid}}/website/{{wid}}"><b>Edit Website</b></a>
-			<button class="btn sw-color-white float-right sw-button-to-a" type="submit" form="websiteForm"><i class="fas fa-check"></i></button>
+			<button class="btn sw-color-white float-right sw-button-to-a" type="submit" [disabled]="f.invalid" form="websiteForm"><i class="fas fa-check"></i></button>
 		</div>
 	</nav>
 	<div class="row">
@@ -38,7 +38,7 @@
 						<textarea rows="5" class="form-control" name="description" placeholder="Describe your website here" ngModel="{{website.description}}" #description="ngModel"></textarea>
 					</div>
 					<button (click)="delete()" type="button" class="btn btn-danger">Delete</button>
-					<button type="submit" class="btn btn-primary float-right">Update</button>
+					<button [disabled]="f.invalid" type="submit" class="btn btn-primary float-right">Update</button>
 				</form>
 			</div>
 		</div>
