--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -9,7 +9,7 @@
 		<ul class="list-group list-group-flush">
 			<li class="list-group-item"><button class="btn sw-button-to-a" (click)="create('HEADING')">Header</button></li>
 			<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Label</a></li>
-			<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">HTML</a></li>
+			<li class="list-group-item"><button class="btn sw-button-to-a" (click)="create('HTML')">HTML</button></li>
 			<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Text Input</a></li>
 			<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Link</a></li>
 			<li class="list-group-item"><a routerLink="/user/:uid/website/:wid/page/:pid/widget/:wgid">Button</a></li>
