--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -11,4 +11,9 @@
 	<div *ngSwitchCase="'YOUTUBE'">
 		<app-widget-youtube></app-widget-youtube>
 	</div>
+	<!-- HTML -->
+	<div *ngSwitchCase="'HTML'">
+		<app-widget-html></app-widget-html>
+	</div>
+
 </div>
