--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -15,5 +15,9 @@
 	<div *ngSwitchCase="'HTML'">
 		<app-widget-html></app-widget-html>
 	</div>
+	<!-- TEXT -->
+	<div *ngSwitchCase="'TEXT'">
+		<app-widget-text></app-widget-text>
+	</div>
 
 </div>
