--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid animate-fading">
 		<h1>Register</h1>
 		<div class="alert alert-danger" *ngIf="usernameError">
 			Username is already taken, please try another one.		
